Perkin-UAT/force-app/main/default/objects/Territory_Selection__c/Territory_Selection__c.object-meta.xml
<CustomObject>
    <label>Territory Selection</label>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Territory Selection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Selections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>