Perkin-UAT/force-app/main/default/objects/Territory_Selection__c/fields/Americas_Countries__c.field-meta.xml
<CustomField>
    <fullName>Americas_Countries__c</fullName>
    <label>Americas Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ANGUILLA</fullName>
            </value>
            <value>
                <fullName>ANTARCTICA</fullName>
            </value>
            <value>
                <fullName>ANTIGUA &amp; BARBUDA</fullName>
            </value>
            <value>
                <fullName>ARGENTINA</fullName>
            </value>
            <value>
                <fullName>ARUBA</fullName>
            </value>
            <value>
                <fullName>BAHAMAS</fullName>
            </value>
            <value>
                <fullName>BARBADOS</fullName>
            </value>
            <value>
                <fullName>BELIZE</fullName>
            </value>
            <value>
                <fullName>BERMUDA</fullName>
            </value>
            <value>
                <fullName>BOLIVIA</fullName>
            </value>
            <value>
                <fullName>BRAZIL</fullName>
            </value>
            <value>
                <fullName>BRITISH VIRGIN ISLANDS</fullName>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>CAYMAN ISLANDS</fullName>
            </value>
            <value>
                <fullName>CHILE</fullName>
            </value>
            <value>
                <fullName>COLOMBIA</fullName>
            </value>
            <value>
                <fullName>COSTA RICA</fullName>
            </value>
            <value>
                <fullName>CUBA</fullName>
            </value>
            <value>
                <fullName>DOMINICA</fullName>
            </value>
            <value>
                <fullName>DOMINICAN REPUBLIC</fullName>
            </value>
            <value>
                <fullName>ECUADOR</fullName>
            </value>
            <value>
                <fullName>EL SALVADOR</fullName>
            </value>
            <value>
                <fullName>FALKLAND ISLANDS</fullName>
            </value>
            <value>
                <fullName>GRENADA</fullName>
            </value>
            <value>
                <fullName>GUATEMALA</fullName>
            </value>
            <value>
                <fullName>GUYANA</fullName>
            </value>
            <value>
                <fullName>HAITI</fullName>
            </value>
            <value>
                <fullName>HONDURAS</fullName>
            </value>
            <value>
                <fullName>JAMAICA</fullName>
            </value>
            <value>
                <fullName>MEXICO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>