Perkin-UAT/force-app/main/default/objects/Territory_Selection__c/fields/Asia_Countries__c.field-meta.xml
<CustomField>
    <fullName>Asia_Countries__c</fullName>
    <label>Asia Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AMERICAN SAMOA</fullName>
            </value>
            <value>
                <fullName>ANTARCTICA</fullName>
            </value>
            <value>
                <fullName>AUSTRALIA</fullName>
            </value>
            <value>
                <fullName>BANGLADESH</fullName>
            </value>
            <value>
                <fullName>BHUTAN</fullName>
            </value>
            <value>
                <fullName>BRUNEI DARUSSALAM</fullName>
            </value>
            <value>
                <fullName>CAMBODIA</fullName>
            </value>
            <value>
                <fullName>CHINA</fullName>
            </value>
            <value>
                <fullName>CHRISTMAS IS. (AUSTRAILIA</fullName>
            </value>
            <value>
                <fullName>COCOS(KEELING) IS. (AUST)</fullName>
            </value>
            <value>
                <fullName>COOK ISLANDS</fullName>
            </value>
            <value>
                <fullName>EAST TIMOR</fullName>
            </value>
            <value>
                <fullName>FIJI</fullName>
            </value>
            <value>
                <fullName>FRENCH POLYNESIA</fullName>
            </value>
            <value>
                <fullName>GREATER CHINA ADJUSTMENT</fullName>
            </value>
            <value>
                <fullName>GUAM</fullName>
            </value>
            <value>
                <fullName>HEARD &amp; MCDONALD IS.(AUS)</fullName>
            </value>
            <value>
                <fullName>HONG KONG</fullName>
            </value>
            <value>
                <fullName>INDIA</fullName>
            </value>
            <value>
                <fullName>INDONESIA</fullName>
            </value>
            <value>
                <fullName>JAPAN</fullName>
            </value>
            <value>
                <fullName>JAPAN ADJUSTMENT</fullName>
            </value>
            <value>
                <fullName>JAPAN-OCEANIC ADJUSTMENT</fullName>
            </value>
            <value>
                <fullName>JOHNSTON,MIDWAY,WAKE ISLS</fullName>
            </value>
            <value>
                <fullName>KIRIBATI</fullName>
            </value>
            <value>
                <fullName>KOREA,DEM PEOPLES REP</fullName>
            </value>
            <value>
                <fullName>KOREA, REPUBLIC OF</fullName>
            </value>
            <value>
                <fullName>KOSEA ADJUSTMENT</fullName>
            </value>
            <value>
                <fullName>LAOS</fullName>
            </value>
            <value>
                <fullName>MACAU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>