Perkin-UAT/force-app/main/default/objects/Territory_Selection__c/fields/Asia_Countries_Print_1__c.field-meta.xml
<CustomField>
    <fullName>Asia_Countries_Print_1__c</fullName>
    <label>Asia Countries Print 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>