Perkin-UAT/force-app/main/default/objects/Territory_Selection__c/fields/Europe_Countries_1__c.field-meta.xml
<CustomField>
    <fullName>Europe_Countries_1__c</fullName>
    <description>Europe Countries 1 is created to workaround the limitation of choosing more than 100 items from a picklist</description>
    <inlineHelpText>Choose Europe Countries that starts with A - L</inlineHelpText>
    <label>Europe Countries 1 (A – L)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AFGHANISTAN</fullName>
            </value>
            <value>
                <fullName>ALBANIA</fullName>
            </value>
            <value>
                <fullName>ALGERIA</fullName>
            </value>
            <value>
                <fullName>ANDORRA</fullName>
            </value>
            <value>
                <fullName>ANGOLA</fullName>
            </value>
            <value>
                <fullName>ARMENIA</fullName>
            </value>
            <value>
                <fullName>AUSTRIA</fullName>
            </value>
            <value>
                <fullName>AZERBAIJAN</fullName>
            </value>
            <value>
                <fullName>BAHRAIN</fullName>
            </value>
            <value>
                <fullName>BELARUS</fullName>
            </value>
            <value>
                <fullName>BELGIUM</fullName>
            </value>
            <value>
                <fullName>BENIN</fullName>
            </value>
            <value>
                <fullName>BOSNIA AND HERZEGOVINA</fullName>
            </value>
            <value>
                <fullName>BOTSWANA</fullName>
            </value>
            <value>
                <fullName>BOUVET ISLAND</fullName>
            </value>
            <value>
                <fullName>BRITISH INDIAN OCEAN TERR</fullName>
            </value>
            <value>
                <fullName>BULGARIA</fullName>
            </value>
            <value>
                <fullName>BURKINA FASO</fullName>
            </value>
            <value>
                <fullName>BURUNDI</fullName>
            </value>
            <value>
                <fullName>CAMEROON</fullName>
            </value>
            <value>
                <fullName>CAPE VERDE</fullName>
            </value>
            <value>
                <fullName>CENTRAL AFRICAN REPUBLIC</fullName>
            </value>
            <value>
                <fullName>CHAD</fullName>
            </value>
            <value>
                <fullName>COMOROS</fullName>
            </value>
            <value>
                <fullName>CONGO</fullName>
            </value>
            <value>
                <fullName>CROATIA</fullName>
            </value>
            <value>
                <fullName>CYPRUS</fullName>
            </value>
            <value>
                <fullName>CZECHOSLOVAKIA</fullName>
            </value>
            <value>
                <fullName>CZECH REPUBLIC</fullName>
            </value>
            <value>
                <fullName>DENMARK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>