Perkin-UAT/force-app/main/default/objects/Territory_Selection__c/fields/Europe_Countries_2__c.field-meta.xml
<CustomField>
    <fullName>Europe_Countries_2__c</fullName>
    <description>Europe Countries 2 is created to workaround the limitation of choosing more than 100 items from  a picklist</description>
    <inlineHelpText>Choose Europe Countries that starts with M - Z</inlineHelpText>
    <label>Europe Countries 2 (M – Z)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MADAGASCAR</fullName>
            </value>
            <value>
                <fullName>MALAWI</fullName>
            </value>
            <value>
                <fullName>MALI</fullName>
            </value>
            <value>
                <fullName>MALTA</fullName>
            </value>
            <value>
                <fullName>MARTINIQUE</fullName>
            </value>
            <value>
                <fullName>MAURITANIA</fullName>
            </value>
            <value>
                <fullName>MAURITIUS</fullName>
            </value>
            <value>
                <fullName>MAYOTTE</fullName>
            </value>
            <value>
                <fullName>MOLDOVA, REPUBLIC OF</fullName>
            </value>
            <value>
                <fullName>MONACO</fullName>
            </value>
            <value>
                <fullName>MOROCCO</fullName>
            </value>
            <value>
                <fullName>MOZAMBIQUE</fullName>
            </value>
            <value>
                <fullName>NAMIBIA</fullName>
            </value>
            <value>
                <fullName>NETHERLANDS</fullName>
            </value>
            <value>
                <fullName>NEW CALEDONIA</fullName>
            </value>
            <value>
                <fullName>NIGER</fullName>
            </value>
            <value>
                <fullName>NIGERIA</fullName>
            </value>
            <value>
                <fullName>NORWAY</fullName>
            </value>
            <value>
                <fullName>OMAN</fullName>
            </value>
            <value>
                <fullName>PAKISTAN</fullName>
            </value>
            <value>
                <fullName>POLAND</fullName>
            </value>
            <value>
                <fullName>PORTUGAL</fullName>
            </value>
            <value>
                <fullName>QATAR</fullName>
            </value>
            <value>
                <fullName>REPUBLIC OF MONTENEGRO</fullName>
            </value>
            <value>
                <fullName>REPUBLIC OF SERBIA</fullName>
            </value>
            <value>
                <fullName>REUNION</fullName>
            </value>
            <value>
                <fullName>ROMANIA</fullName>
            </value>
            <value>
                <fullName>RUSSIAN FEDERATION</fullName>
            </value>
            <value>
                <fullName>RWANDA</fullName>
            </value>
            <value>
                <fullName>SAN MARINO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>