Perkin-UAT/force-app/main/default/objects/Territory_Selection__c/fields/Europe_Countries_Print_2__c.field-meta.xml
<CustomField>
    <fullName>Europe_Countries_Print_2__c</fullName>
    <label>Europe Countries Print 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>